--- a/trie-cli/package.json
+++ b/trie-cli/package.json
@@ -20,7 +20,9 @@
   "author": "Aydan Pirani",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "esm": "^3.2.25",
+    "form-data": "^4.0.0",
     "inquirer": "^8.0.0"
   }
 }
